--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -7,16 +7,54 @@ body {
 }
 
 .nav {
-  background-color: gray;
-  color: white;
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  padding: 16px 20px;
+  background-color: #f8f8f8;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .site-logo {
-  font-size: 2rem;
+  font-size: 32px;
+  color: #333;
+  text-decoration: none;
 }
 
-.nav a {
-  text-decoration: none;
+.search-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.input-container {
+  position: relative;
+  width: 75%;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 13px 40px 13px 13px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  font-size: 16px;
+  outline: 0;
+  background-color: #f3f2f2;
+}
+
+button[type="submit"] {
+  position: absolute;
+  right: 10px;
+  top: 55%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: #333;
+  font-size: 18px;
+}
+
+button[type="submit"]:hover {
+  color: #0056b3;
 }
