--- a/client/src/styles/ClassList.css
+++ b/client/src/styles/ClassList.css
@@ -1,7 +1,20 @@
-.data-table-wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-  margin-top: 30px;
+.grade-distribution {
+  margin: 50px auto;
+  max-width: fit-content;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.grade-distribution .p-datatable .p-datatable-thead > tr > th,
+.grade-distribution .p-datatable .p-datatable-tbody > tr > td {
+  white-space: normal;
+  word-wrap: break-word;
+  max-width: 175px;
+  padding: 3px;
+}
