--- a/client/src/styles/ClassList.css
+++ b/client/src/styles/ClassList.css
@@ -1,14 +1,19 @@
 .grade-distribution {
-  margin: 50px auto;
-  max-width: fit-content;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1250px;
+  padding: 25px;
 }
 
 .header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 5px;
   font-weight: bold;
-  font-size: 18px;
+}
+
+.keyword-search-label {
+  font-weight: normal;
 }
 
 .grade-distribution .p-datatable .p-datatable-thead > tr > th,
@@ -16,5 +21,5 @@
   white-space: normal;
   word-wrap: break-word;
   max-width: 175px;
-  padding: 3px;
+  padding: 5px;
 }
