added column specific search filters

--- a/client/src/styles/ClassList.css
+++ b/client/src/styles/ClassList.css
@@ -1,25 +1,41 @@
-.grade-distribution {
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1250px;
-  padding: 25px;
-}
-
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-weight: bold;
+  font-size: 15px;
 }
 
 .keyword-search-label {
   font-weight: normal;
 }
 
-.grade-distribution .p-datatable .p-datatable-thead > tr > th,
-.grade-distribution .p-datatable .p-datatable-tbody > tr > td {
-  white-space: normal;
-  word-wrap: break-word;
-  max-width: 175px;
-  padding: 5px;
+.sidebar {
+  width: 250px;
+  padding: 25px;
+  background-color: #eeeeee;
+  border-right: 1px solid #ddd;
+  height: 100%;
+  position: fixed;
+}
+
+.content {
+  margin-left: 275px;
+  margin-right: 20px;
+  padding: 22px;
+  transition: margin-left 0.3s;
+  transition: 0.3s;
+}
+
+.p-field {
+  margin-bottom: 15px;
+}
+
+.p-field label {
+  display: block;
+  margin-bottom: 1px;
+}
+
+.p-field input {
+  width: 100%;
 }
