--- a/client/src/styles/ClassList.css
+++ b/client/src/styles/ClassList.css
@@ -1,3 +1,22 @@
+.layout {
+  display: flex;
+}
+
+.sidebar {
+  width: 250px;
+  padding: 25px;
+  background-color: #eeeeee;
+  border-right: 1px solid #ddd;
+  flex-shrink: 0; 
+}
+
+.content {
+  flex-grow: 1; 
+  margin-right: 20px;
+  padding: 22px;
+  overflow-y: auto;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -6,25 +25,17 @@
   font-size: 15px;
 }
 
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 20px;
+  background-color: #f8f8f8;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 .keyword-search-label {
   font-weight: normal;
-}
-
-.sidebar {
-  width: 250px;
-  padding: 25px;
-  background-color: #eeeeee;
-  border-right: 1px solid #ddd;
-  height: 100%;
-  position: fixed;
-}
-
-.content {
-  margin-left: 275px;
-  margin-right: 20px;
-  padding: 22px;
-  transition: margin-left 0.3s;
-  transition: 0.3s;
 }
 
 .p-field {
