--- a/client/src/styles/ClassList.css
+++ b/client/src/styles/ClassList.css
@@ -1,52 +1,27 @@
-.layout {
-  display: flex;
+.classlist-container {
+  margin-top: 21px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1300px;
+  padding: 10px;
 }
 
-.sidebar {
-  width: 250px;
-  padding: 25px;
-  background-color: #eeeeee;
-  border-right: 1px solid #ddd;
-  flex-shrink: 0; 
-}
-
-.content {
-  flex-grow: 1; 
-  margin-right: 20px;
-  padding: 22px;
-  overflow-y: auto;
-}
-
-.header {
+.classlist-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
-  font-size: 15px;
-}
-
-.nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px 20px;
-  background-color: #f8f8f8;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
 }
 
 .keyword-search-label {
   font-weight: normal;
 }
 
-.p-field {
-  margin-bottom: 15px;
-}
-
-.p-field label {
-  display: block;
-  margin-bottom: 1px;
-}
-
-.p-field input {
-  width: 100%;
+.classlist-container .p-datatable .p-datatable-thead > tr > th,
+.classlist-container .p-datatable .p-datatable-tbody > tr > td {
+  white-space: normal;
+  word-wrap: break-word;
+  max-width: 175px;
+  padding: 5px;
 }
