--- a/client/src/styles/ClassList.css
+++ b/client/src/styles/ClassList.css
@@ -1,5 +1,6 @@
 .classlist-container {
-  margin-top: 14px;
+  margin-top: 50px;
+  margin-top: auto;
   margin-left: auto;
   margin-right: auto;
   max-width: 1300px;
@@ -7,6 +8,7 @@
 }
 
 .classlist-header {
+  margin-top: 90px; 
   display: flex;
   justify-content: space-between;
   align-items: center;
