--- a/client/src/styles/ClassList.css
+++ b/client/src/styles/ClassList.css
@@ -1,19 +1,30 @@
 .classlist-container {
-  margin-top: 50px;
   margin-top: auto;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1300px;
+  max-width: 1250px;
   padding: 10px;
+  padding-top: 98px;
 }
 
 .classlist-header {
-  margin-top: 90px; 
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
-  margin-bottom: 2px;
+  margin-bottom: 5px;
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  padding: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12);
+}
+
+.classlist-container .p-datatable {
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  padding: 1px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.12);
 }
 
 .keyword-search-label {
@@ -26,4 +37,5 @@
   word-wrap: break-word;
   max-width: 175px;
   padding: 5px;
+  border-bottom: 1px solid #e0e0e0; /* Light gray line between rows */
 }
