--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,9 +1,39 @@
 .home-page {
-  position: fixed;
-  inset: 0px;
-  width: 12rem;
-  height: 5rem;
-  max-width: 100vw;
-  max-height: 100dvh;
-  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  padding-top: 80px;
+  box-sizing: border-box;
+  overflow: hidden;
+  background-image: url("https://www.countdowns.live/_next/image?url=%2Fbackgrounds%2Flofigirl.gif&w=1920&q=75");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.home-content {
+  background-color: transparent;
+  background: rgba(0, 0, 0, 0.32);
+  padding: 16px;
+  border-radius: 30px;
+  color: rgba(255, 255, 255, 0.959);
+  margin-bottom: 30px;
+}
+
+.home-content h1 {
+  font-size: 41px;
+}
+
+.home-content h3 {
+  max-width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.home-button {
+  margin-top: 25px;
+  max-width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
 }
