--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -10,6 +10,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  filter: saturate(1.1)
 }
 
 .home-content {
